# tomomesh

./: .gitmodules  CMakeLists.txt  README.md  bind_to_py.cpp  load_triangles_from_obj.cpp  load_triangles_from_obj.hpp  load_triangles_from_obj.py  mesh_fp.py
